Fix: ajuste de novedades y cumplido
