# swagger/swagger.json
@@ -15,7 +15,7 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/cumplido/obtener_detalle_CT/{ano}/{mes}/{contrato}": {
+        "/cumplido/{ano}/{mes}/{contrato}/{vigencia}": {
             "get": {
                 "tags": [
                     "cumplido"
@@ -41,6 +41,13 @@
                         "in": "path",
                         "name": "contrato",
                         "description": "Contrato a buscar",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "vigencia",
+                        "description": "vigencia del contrato",
                         "required": true,
                         "type": "string"
                     }
@@ -468,7 +475,7 @@
                 }
             }
         },
-        "/novedad/cancelar_contrato/{NumeroContrato}": {
+        "/novedad/cancelar_contrato/{NumeroContrato}/{Vigencia}": {
             "get": {
                 "tags": [
                     "novedad"
@@ -480,6 +487,14 @@
                         "in": "path",
                         "name": "NumeroContrato",
                         "description": "Numero del contrato que se va a cancelar",
+                        "schema": {
+                            "$ref": "#/definitions/true"
+                        }
+                    },
+                    {
+                        "in": "path",
+                        "name": "Vigencia",
+                        "description": "Vigencia del contrato que se va a cancelar",
                         "schema": {
                             "$ref": "#/definitions/true"
                         }
@@ -1037,24 +1052,6 @@
                 }
             }
         },
-        "models.InformacionContratoDocente": {
-            "title": "InformacionContratoDocente",
-            "type": "object",
-            "properties": {
-                "MesesContrato": {
-                    "type": "string"
-                },
-                "NumDocumento": {
-                    "type": "string"
-                },
-                "ValorContrato": {
-                    "type": "string"
-                },
-                "VigenciaContrato": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Nomina": {
             "title": "Nomina",
             "type": "object",
@@ -1160,6 +1157,10 @@
                 },
                 "NumeroContrato": {
                     "type": "string"
+                },
+                "Vigencia": {
+                    "type": "integer",
+                    "format": "int64"
                 }
             }
         },
@@ -1284,6 +1285,10 @@
                 },
                 "NumeroContrato": {
                     "type": "string"
+                },
+                "Vigencia": {
+                    "type": "integer",
+                    "format": "int64"
                 }
             }
         },
